WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304719
Col elements with span > 1 don't apply width to spanned columns
https://bugs.webkit.org/show_bug.cgi?id=304719
Summary
Col elements with span > 1 don't apply width to spanned columns
Ahmad Saleem
Reported
2025-12-26 21:40:48 PST
ssia - progress WPT and match with other browsers.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-26 21:40:56 PST
<
rdar://problem/167225435
>
Ahmad Saleem
Comment 2
2025-12-26 21:43:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55889
EWS
Comment 3
2026-01-05 11:38:22 PST
Committed
305113@main
(3cad02c9f18f): <
https://commits.webkit.org/305113@main
> Reviewed commits have been landed. Closing PR #55889 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug