Col elements with span > 1 don't apply width to spanned columns https://bugs.webkit.org/show_bug.cgi?id=304719 rdar://167225435

Reviewed by Alan Baradlay.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

When a <col> element has span > 1, its width (or inherited colgroup
width) should apply to all columns it spans. Previously, only cols
with span=1 had their widths applied, causing cols with larger spans
to be ignored during table layout width calculation.

* Source/WebCore/rendering/AutoTableLayout.cpp:
(WebCore::AutoTableLayout::fullRecalc):

> Progression:
* LayoutTests/imported/w3c/web-platform-tests/css/css-tables/tentative/colgroup-col-expected.txt: Progression
* LayoutTests/platform/mac/tables/mozilla_expected_failures/core/cols1-expected.txt: Now matches other browser engines
* LayoutTests/platform/ios/tables/mozilla_expected_failures/core/cols1-expected.txt: Ditto
* LayoutTests/platform/glib/tables/mozilla_expected_failures/core/cols1-expected.txt: Ditto

> Rebaseline:
* LayoutTests/imported/w3c/web-platform-tests/css/css-tables/column-track-merging-expected.txt: Seems more closer to expected now.

Canonical link: https://commits.webkit.org/305113@main